# subconverter

./: .dockerignore  .gitignore  CMakeLists.txt  README-cn.md  README-docker.md  README.md
.github/: project-metadata.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/templates/: README.md.tmpl
.github/workflows/: auto_sync.yml  build.yml  clean_failed_cancelled_runs.yml  docker.yml
base/: pref.example.toml
cmake/: project_version.h.in
include/: quickjspp.hpp
scripts/: Dockerfile  build.alpine.release.sh  build.macos.release.sh  build.windows.release.sh  generate_version.sh  merge_manifest.py  project_metadata.py  test_outbound_headers.py
scripts/patches/: 0002-rapidjson-disable-string-ref-assignment.patch
src/: main.cpp  version.h
src/config/: binding.h  proxygroup.h
src/generator/config/: nodemanip.cpp  subexport.cpp
src/handler/: interfaces.cpp  webget.cpp
src/parser/: subparser.cpp  subparser.h
src/parser/config/: proxy.h
src/script/: script_quickjs.cpp
src/server/: webserver.h  webserver_httplib.cpp  webserver_libevent.cpp
src/utils/: file.h
tests/: test_project_customization.py
