CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(subconverter LANGUAGES CXX)
SET(BUILD_TARGET_NAME ${PROJECT_NAME})
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include/")

SET(SUBCONVERTER_PROJECT_COMMIT "" CACHE STRING "Commit used for this project build")
SET(SUBCONVERTER_BUILD_VERSION "" CACHE STRING "Override the complete build version")

FILE(READ "${CMAKE_SOURCE_DIR}/.github/project-metadata.json" PROJECT_METADATA_JSON)
STRING(REGEX MATCH "\"upstream_commit\"[ \t\r\n]*:[ \t\r\n]*\"([0-9a-fA-F]+)\"" _ "${PROJECT_METADATA_JSON}")
SET(SUBCONVERTER_UPSTREAM_COMMIT "${CMAKE_MATCH_1}")
STRING(REGEX MATCH "\"upstream_version\"[ \t\r\n]*:[ \t\r\n]*\"([^\"]+)\"" _ "${PROJECT_METADATA_JSON}")
SET(SUBCONVERTER_METADATA_UPSTREAM_VERSION "${CMAKE_MATCH_1}")
STRING(REGEX MATCH "\"edition\"[ \t\r\n]*:[ \t\r\n]*\"([A-Za-z0-9._-]+)\"" _ "${PROJECT_METADATA_JSON}")
SET(SUBCONVERTER_EDITION "${CMAKE_MATCH_1}")
STRING(REGEX MATCH "\"user_agent\"[ \t\r\n]*:[ \t\r\n]*\"([^\"]+)\"" _ "${PROJECT_METADATA_JSON}")
SET(SUBCONVERTER_OUTBOUND_USER_AGENT "${CMAKE_MATCH_1}")

IF(NOT SUBCONVERTER_UPSTREAM_COMMIT OR NOT SUBCONVERTER_METADATA_UPSTREAM_VERSION OR NOT SUBCONVERTER_EDITION OR NOT SUBCONVERTER_OUTBOUND_USER_AGENT)
    MESSAGE(FATAL_ERROR "Invalid .github/project-metadata.json")
ENDIF()

FILE(STRINGS "${CMAKE_SOURCE_DIR}/src/version.h" UPSTREAM_VERSION_LINE REGEX "^#define VERSION ")
STRING(REGEX REPLACE ".*\"([^\"]+)\".*" "\\1" SUBCONVERTER_UPSTREAM_VERSION "${UPSTREAM_VERSION_LINE}")
IF(NOT SUBCONVERTER_UPSTREAM_VERSION STREQUAL SUBCONVERTER_METADATA_UPSTREAM_VERSION)
    MESSAGE(FATAL_ERROR "Upstream version metadata does not match src/version.h")
ENDIF()

STRING(SUBSTRING "${SUBCONVERTER_UPSTREAM_COMMIT}" 0 8 SUBCONVERTER_UPSTREAM_COMMIT_SHORT)

IF(NOT SUBCONVERTER_PROJECT_COMMIT)
    EXECUTE_PROCESS(
        COMMAND git status --porcelain --untracked-files=normal
        WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
        RESULT_VARIABLE GIT_STATUS_RESULT
        OUTPUT_VARIABLE GIT_STATUS_OUTPUT
        OUTPUT_STRIP_TRAILING_WHITESPACE
        ERROR_QUIET)
    IF(GIT_STATUS_RESULT EQUAL 0 AND NOT GIT_STATUS_OUTPUT)
        EXECUTE_PROCESS(
            COMMAND git rev-parse --short=8 HEAD
            WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
            OUTPUT_VARIABLE SUBCONVERTER_PROJECT_COMMIT
            OUTPUT_STRIP_TRAILING_WHITESPACE
            ERROR_QUIET)
    ENDIF()
ENDIF()

IF(NOT SUBCONVERTER_PROJECT_COMMIT)
    SET(SUBCONVERTER_PROJECT_COMMIT "local")
ENDIF()

IF(SUBCONVERTER_PROJECT_COMMIT MATCHES "^[0-9a-fA-F]+$")
    STRING(LENGTH "${SUBCONVERTER_PROJECT_COMMIT}" PROJECT_COMMIT_LENGTH)
    IF(PROJECT_COMMIT_LENGTH GREATER 8)
        STRING(SUBSTRING "${SUBCONVERTER_PROJECT_COMMIT}" 0 8 SUBCONVERTER_PROJECT_COMMIT_SHORT)
    ELSE()
        SET(SUBCONVERTER_PROJECT_COMMIT_SHORT "${SUBCONVERTER_PROJECT_COMMIT}")
    ENDIF()
ELSE()
    SET(SUBCONVERTER_PROJECT_COMMIT_SHORT "${SUBCONVERTER_PROJECT_COMMIT}")
ENDIF()

IF(SUBCONVERTER_BUILD_VERSION)
    SET(SUBCONVERTER_RESOLVED_VERSION "${SUBCONVERTER_BUILD_VERSION}")
ELSE()
    SET(SUBCONVERTER_RESOLVED_VERSION
        "${SUBCONVERTER_UPSTREAM_VERSION}-${SUBCONVERTER_UPSTREAM_COMMIT_SHORT}-${SUBCONVERTER_EDITION}.${SUBCONVERTER_PROJECT_COMMIT_SHORT}")
ENDIF()

SET(PROJECT_VERSION_HEADER "${CMAKE_BINARY_DIR}/generated/project_version.h")
CONFIGURE_FILE("${CMAKE_SOURCE_DIR}/cmake/project_version.h.in" "${PROJECT_VERSION_HEADER}" @ONLY)
MESSAGE(STATUS "Subconverter build version: ${SUBCONVERTER_RESOLVED_VERSION}")

if (MINGW)
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--allow-multiple-definition")
endif()

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
ENDIF()
SET(CMAKE_CXX_STANDARD 20)

IF(NOT MSVC)
    ADD_COMPILE_OPTIONS(-Wall -Wextra -Wno-unused-parameter -Wno-unused-result)
ELSE()
    ADD_COMPILE_OPTIONS(/W4)
ENDIF()

#remove std::regex support since it is not compatible with group modifiers and slow
#OPTION(USING_STD_REGEX "Use std::regex from C++ library instead of PCRE2." OFF)
OPTION(USING_MALLOC_TRIM "Call malloc_trim after processing request to lower memory usage (Your system must support malloc_trim)." OFF)
#now using internal MD5 calculation
#OPTION(USING_MBEDTLS "Use mbedTLS instead of OpenSSL for MD5 calculation." OFF)
OPTION(BUILD_STATIC_LIBRARY "Build a static library containing only the essential part." OFF)

INCLUDE(CheckCXXSourceCompiles)
CHECK_CXX_SOURCE_COMPILES(
"
#include<string>
int main(){std::to_string(0);}
" HAVE_TO_STRING)

IF(NOT BUILD_STATIC_LIBRARY)

ADD_EXECUTABLE(${BUILD_TARGET_NAME} 
    src/generator/config/nodemanip.cpp
    src/generator/config/ruleconvert.cpp
    src/generator/config/subexport.cpp
    src/generator/template/templates.cpp
    src/handler/interfaces.cpp
    src/handler/multithread.cpp
    src/handler/upload.cpp
    src/handler/webget.cpp
    src/handler/settings.cpp
    src/main.cpp
    src/parser/infoparser.cpp
    src/parser/subparser.cpp
    src/script/cron.cpp
    src/script/script_quickjs.cpp
#    src/server/webserver_libevent.cpp
    src/server/webserver_httplib.cpp
    src/utils/base64/base64.cpp
    src/utils/codepage.cpp
    src/utils/file.cpp
    src/utils/logger.cpp
    src/utils/md5/md5.cpp
    src/utils/network.cpp
    src/utils/regexp.cpp
    src/utils/string.cpp
    src/utils/system.cpp
    src/utils/urlencode.cpp)
TARGET_INCLUDE_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE src)
TARGET_INCLUDE_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE "${CMAKE_BINARY_DIR}/generated")
TARGET_LINK_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE ${CMAKE_SOURCE_DIR})

FIND_PACKAGE(PkgConfig REQUIRED)

SET(THREADS_PREFER_PTHREAD_FLAG ON)
FIND_PACKAGE(Threads REQUIRED)
TARGET_LINK_LIBRARIES(${BUILD_TARGET_NAME} ${CMAKE_THREAD_LIBS_INIT})

#PKG_CHECK_MODULES(LIBEVENT libevent>=2.1.10 REQUIRED)
#FIND_PATH(LIBEVENT_INCLUDE_DIR NAMES event.h PATHS ${LIBEVENT_INCLUDE_DIRS})
#FIND_LIBRARY(LIBEVENT_LIBRARY NAMES event PATHS ${LIBEVENT_LIBRARY_DIRS})
#TARGET_LINK_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE ${LIBEVENT_LIBRARY_DIRS})
#TARGET_INCLUDE_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE ${LIBEVENT_INCLUDE_DIR})
#TARGET_LINK_LIBRARIES(${BUILD_TARGET_NAME} ${LIBEVENT_LIBRARY})

FIND_PACKAGE(CURL 7.54.0 REQUIRED)
TARGET_LINK_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE ${CURL_LIBRARY_DIRS})
TARGET_INCLUDE_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE ${CURL_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${BUILD_TARGET_NAME} CURL::libcurl)
TARGET_COMPILE_DEFINITIONS(${BUILD_TARGET_NAME} PRIVATE -DCURL_STATICLIB)

FIND_PACKAGE(Rapidjson REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE ${RAPIDJSON_INCLUDE_DIRS})

FIND_PACKAGE(toml11 REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE ${TOML11_INCLUDE_DIRS})

PKG_CHECK_MODULES(YAML_CPP yaml-cpp>=0.6.3 REQUIRED)
FIND_LIBRARY(YAML_CPP_LIBRARY NAMES yaml-cpp yaml-cppd PATHS ${YAML_CPP_LIBRARY_DIRS})
TARGET_LINK_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE ${YAML_CPP_LIBRARY_DIRS})
TARGET_INCLUDE_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE ${YAML_CPP_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${BUILD_TARGET_NAME} ${YAML_CPP_LIBRARY})
TARGET_COMPILE_DEFINITIONS(${BUILD_TARGET_NAME} PRIVATE -DYAML_CPP_STATIC_DEFINE)

FIND_PACKAGE(PCRE2 REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE ${PCRE2_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${BUILD_TARGET_NAME} ${PCRE2_LIBRARY})
TARGET_COMPILE_DEFINITIONS(${BUILD_TARGET_NAME} PRIVATE -DPCRE2_STATIC)

FIND_PACKAGE(QuickJS REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE ${QUICKJS_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${BUILD_TARGET_NAME} ${QUICKJS_LIBRARIES})

FIND_PACKAGE(LibCron REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE ${LIBCRON_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${BUILD_TARGET_NAME} ${LIBCRON_LIBRARIES})

IF(WIN32)
    TARGET_LINK_LIBRARIES(${BUILD_TARGET_NAME} wsock32 ws2_32)
ELSE()
    INCLUDE(GNUInstallDirs)
    INSTALL(TARGETS ${BUILD_TARGET_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR}/${BUILD_TARGET_NAME})
    INSTALL(DIRECTORY base/ DESTINATION ${CMAKE_INSTALL_BINDIR}/${BUILD_TARGET_NAME} FILES_MATCHING PATTERN "*")
ENDIF()

ELSE() #BUILD_STATIC_LIBRARY

ADD_LIBRARY(${BUILD_TARGET_NAME} STATIC
    src/generator/config/ruleconvert.cpp
    src/generator/config/subexport.cpp
    src/generator/template/templates.cpp
    src/lib/wrapper.cpp
    src/parser/subparser.cpp
    src/utils/base64/base64.cpp
    src/utils/codepage.cpp
    src/utils/logger.cpp
    src/utils/md5/md5.cpp
    src/utils/network.cpp
    src/utils/regexp.cpp
    src/utils/string.cpp
    src/utils/urlencode.cpp)
TARGET_COMPILE_DEFINITIONS(${BUILD_TARGET_NAME} PRIVATE -DNO_JS_RUNTIME -DNO_WEBGET)

TARGET_INCLUDE_DIRECTORIES(${BUILD_TARGET_NAME} PUBLIC src)
TARGET_INCLUDE_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE "${CMAKE_BINARY_DIR}/generated")

FIND_PACKAGE(Rapidjson REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE ${RAPIDJSON_INCLUDE_DIRS})

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(YAML_CPP yaml-cpp>=0.6.3 REQUIRED)
FIND_LIBRARY(YAML_CPP_LIBRARY NAMES yaml-cpp yaml-cppd PATHS ${YAML_CPP_LIBRARY_DIRS})
TARGET_LINK_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE ${YAML_CPP_LIBRARY_DIRS})
TARGET_INCLUDE_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE ${YAML_CPP_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${BUILD_TARGET_NAME} PRIVATE ${YAML_CPP_LIBRARY})
TARGET_COMPILE_DEFINITIONS(${BUILD_TARGET_NAME} PRIVATE -DYAML_CPP_STATIC_DEFINE)

FIND_PACKAGE(PCRE2 REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${BUILD_TARGET_NAME} PRIVATE ${PCRE2_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${BUILD_TARGET_NAME} PRIVATE ${PCRE2_LIBRARY})
TARGET_COMPILE_DEFINITIONS(${BUILD_TARGET_NAME} PRIVATE -DPCRE2_STATIC)

IF(WIN32)
    TARGET_LINK_LIBRARIES(${BUILD_TARGET_NAME} PRIVATE ws2_32)
ENDIF()

ENDIF() #BUILD_STATIC_LIBRARY

IF(MSVC)
    TARGET_COMPILE_OPTIONS(${BUILD_TARGET_NAME} PRIVATE "/FI${PROJECT_VERSION_HEADER}")
ELSE()
    TARGET_COMPILE_OPTIONS(${BUILD_TARGET_NAME} PRIVATE "-include" "${PROJECT_VERSION_HEADER}")
ENDIF()

IF(HAVE_TO_STRING)
    TARGET_COMPILE_DEFINITIONS(${BUILD_TARGET_NAME} PRIVATE -DHAVE_TO_STRING)
ENDIF()

IF(USING_MALLOC_TRIM)
    TARGET_COMPILE_DEFINITIONS(${BUILD_TARGET_NAME} PRIVATE -DMALLOC_TRIM)
ENDIF()
